--- a/assets/style.css
+++ b/assets/style.css
@@ -522,7 +522,7 @@ Skills you'll learn
   }
   .testimonial-text {
     font-size: 1.5rem;
-    font-family: cursive;
+    font-family: sans-serif;
     font-style: italic;
     margin: auto;
     color: #222324;
